--- a/src/index.css
+++ b/src/index.css
@@ -339,7 +339,7 @@
     border-radius: 0.25rem;
   }
   .rounded-full {
-    border-radius: calc(infinity * 1px);
+    border-radius: var(--radius-lg);
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
